// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HiddenToggleViewer - props.reverse should be display property is block for the specified viewsize 1`] = `
.c0 {
  display: none;
}

@media (max-width:900px) {
  .c0 {
    display: block;
  }
}

<span
  aria-label="component"
  class="c0"
>
  <div>
    test
  </div>
</span>
`;

exports[`HiddenToggleViewer - props.reverse should be display property is none 1`] = `
.c0 {
  display: none;
}

@media (max-width:900px) {
  .c0 {
    display: block;
  }
}

<span
  aria-label="component"
  class="c0"
>
  <div>
    test
  </div>
</span>
`;

exports[`HiddenToggleViewer - props.toggle should be display property is block for the specified viewsize 1`] = `
.c0 {
  display: visible;
}

@media (max-width:900px) {
  .c0 {
    display: visible;
  }
}

<span
  aria-label="component"
  class="c0"
>
  <div>
    test
  </div>
</span>
`;

exports[`HiddenToggleViewer - props.toggle should be display property is none 1`] = `
.c0 {
  display: visible;
}

@media (max-width:900px) {
  .c0 {
    display: visible;
  }
}

<span
  aria-label="component"
  class="c0"
>
  <div>
    test
  </div>
</span>
`;
